# socioeconomic_project

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
dags/: economic_dag.py
dashboard/: app.py  database.py  queries.py  requirements.txt
data/: education_expenditures.json  gdp_per_capta.json  health_expenditures.json  socio_economic_data.parquet  socioeconomic_data.parquet
src/: extract_data.py  load_data.py  transform_data.py
