[project]
name = "projeto-socioeconomico"
version = "0.1.0"
description = "App socioeconomico com Streamlit"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "streamlit>=1.30",
    "altair==4.2.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "plotly>=5.20",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "sqlalchemy>=2.0",
]